fix bug panel overlap

--- a/assembl/static/css/components/_nav-bar.scss
+++ b/assembl/static/css/components/_nav-bar.scss
@@ -24,10 +24,10 @@
   .navbar-center {
     margin: 0 auto;
     position: absolute;
-    top: 10px;
+    top: 0;
     left: 0;
     right: 0;
-    width: 15%;
+    width: 50%;
     .add-group {
       text-decoration: none;
       cursor: pointer;
