--- a/assembl/static/css/layout/_groupContainer.scss
+++ b/assembl/static/css/layout/_groupContainer.scss
@@ -185,7 +185,7 @@
           background-color: $gray3;
           border-bottom: 1px solid $white;
           color: $gray;
-          //line-height: 35px;
+          line-height: 35px;
           padding-left: 10px;
         }
         .second-level {
